Run multiple components on same box and many other new features.